# AuthService

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example.env  pyproject.toml
nginx/: nginx.conf
nginx/configs/: auth.conf
src/: main.py  run.sh  test.sh  wsgi.py
src/api/v1/: permission.py  role.py  user.py  utils.py
src/api/v1/components/: perm_schemas.py  role_schemas.py  user_schemas.py
src/core/: __init__.py  config.py  logger.py
src/db/: __init__.py  db.py  init.sql  redis.py
src/migrations/: env.py
src/migrations/versions/: 7b480ce3b6af_initial_migration.py  fb80c9eb93fa_.py
src/models/: __init__.py  permissions.py  role.py  session.py  user.py  utils.py
src/nginx/: nginx.conf
src/nginx/config.d/: auth.conf
src/permission/: layer_models.py  payload_models.py
src/permission/repositories/: __init__.py  protocol.py  sqlalchemy_repo.py
src/permission/services/: permission.py
src/role/: __init__.py  layer_models.py  payload_models.py
src/role/repositories/: __init__.py  protocol.py  sqlalchemy_repo.py
src/role/services/: role.py
src/static/: swagger.json
src/tests/functional/: conftest.py  settings.py
src/tests/functional/src/: test_permission.py  test_role.py  (+1 more)
src/user/: __init__.py  layer_models.py  payload_models.py
src/user/repositories/: __init__.py  protocol.py  redis_repo.py  sqlalchemy_repo.py
src/user/services/: __init__.py  user.py  user_auth.py  user_oauth2.py
src/utils/: command.py  exceptions.py  middlewares.py  tracing.py  types.py
tests/functional/: settings.py
tests/functional/utils/: backoff.py  wait_for_redis.py
